--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
       <div class="table-content">
         <h2>Tabla</h2>
-        <table border="1">
+        <table border="1" style="text-align: center;">
           <thead>
             <tr>
               <th>Columna 1</th>
@@ -50,11 +50,12 @@
               <td>Celda 1</td>
               <td>Celda 2</td>
               <td rowspan="2">Celda 3</td>
-              <td rowspan="2">Celda 4</td>
+              <td>Celda 4</td>
             </tr>
             <tr>
               <td>Celda 1</td>
               <td>Celda 2</td>
+              <td>Celda 4</td>
             </tr>
           </tbody>
           <tfoot>
@@ -64,7 +65,8 @@
               <td>Celda 4</td>
             </tr>
             <tr>
-              <td colspan="2">Celda 1</td>
+              <td>Celda 1</td>
+              <td>Celda 2</td>
               <td>Celda 3</td>
               <td>Celda 4</td>
             </tr>
